<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_login_cover"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foreground="@drawable/login_cover_gradient"
            android:scaleType="centerCrop"
            android:src="@drawable/login_cover_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_meu_beats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="63dp"
            android:fontFamily="@font/dmsansbold"
            android:text="@string/meu_beats"
            android:textColor="@color/white"
            android:textSize="45sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_slogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/dmsansmedium"
            android:text="@string/slogan"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_meu_beats" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_usuario"
            android:layout_width="326dp"
            android:layout_height="54dp"
            android:layout_marginBottom="18dp"
            app:hintEnabled="true"
            android:hint="@string/usuario"
            app:boxStrokeColor="@color/selector"
            app:helperTextEnabled="true"
            app:helperText="@string/nome_cadastrado"
            app:helperTextTextColor="#70EFDE"
            app:layout_constraintBottom_toTopOf="@+id/til_senha"
            app:layout_constraintEnd_toEndOf="@+id/til_senha"
            app:layout_constraintStart_toStartOf="@+id/til_senha"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_senha"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="326dp"
            android:layout_height="54dp"
            android:layout_marginBottom="18dp"
            app:boxStrokeColor="@color/selector"
            app:endIconMode="password_toggle"
            android:hint="@string/senha"
            app:layout_constraintBottom_toTopOf="@+id/btn_entrar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_entrar"
            android:layout_width="326dp"
            android:layout_height="60dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/dmsansbold"
            android:textAllCaps="false"
            android:text="@string/entrar"
            app:layout_constraintBottom_toTopOf="@+id/tv_inscrever"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:cornerRadius="50dp" />

        <TextView
            android:id="@+id/tv_inscrever"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="63dp"
            android:fontFamily="@font/dmsansregular"
            android:text="@string/inscrevase"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_login_cover"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
